RESOLVED FIXED274988
The selection bounding rect of the post-layout data does not contain the full selection if there are multiple lines
https://bugs.webkit.org/show_bug.cgi?id=274988
Summary The selection bounding rect of the post-layout data does not contain the full...
Richard Robinson
Reported 2024-05-31 13:32:20 PDT
Attachments
Richard Robinson
Comment 1 2024-05-31 13:43:32 PDT
EWS
Comment 2 2024-05-31 17:07:03 PDT
Committed 279601@main (fbe3f0c17b52): <https://commits.webkit.org/279601@main> Reviewed commits have been landed. Closing PR #29393 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.