The selection bounding rect of the post-layout data does not contain the full selection if there are multiple lines https://bugs.webkit.org/show_bug.cgi?id=274988 rdar://128963839

Reviewed by Abrar Rahman Protyasha and Aditya Keerthi.

* Source/WebKit/WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::getPlatformEditorState const):

Canonical link: https://commits.webkit.org/279601@main